--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,16 +1,22 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<div class="container pt-2">
+  <h2>Search Dictionary</h2>
+</div>
+<div class="container">
   <form action='word' class="container pt-3">
-    <div class="input-group">
+    <!-- <div class="input-group"> -->
       <div class="form-outline">
-        <input id="search-focus" type="search" name="search" class="form-control" />
+        <input id="search-focus" type="search" name="search" class="form-control border border-primary" />
         <label class="form-label" for="form1">Search</label>
       </div>
+      <br>
         <button type="submit" class="btn btn-primary">
           <i class="fas fa-search"></i>
         </button>
-      </div>
+      <!-- </div> -->
     </div>
   </form>
+</div>
 {% endblock %}
