--- a/home/templates/home/word.html
+++ b/home/templates/home/word.html
@@ -1,25 +1,34 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<div class="container pt-2">
+  <h2>Search Dictionary</h2>
+</div>
+<div class="container">
   <form action='word' class="container pt-3">
-    <div class="input-group">
+    <!-- <div class="input-group"> -->
       <div class="form-outline">
-        <input id="search-focus" type="search" name="search" class="form-control" />
+        <input id="search-focus" type="search" name="search" class="form-control border border-primary" />
         <label class="form-label" for="form1">Search</label>
       </div>
+      <br>
         <button type="submit" class="btn btn-primary">
           <i class="fas fa-search"></i>
         </button>
-      </div>
+      <!-- </div> -->
     </div>
   </form>
+</div>
   <div class="container pt-3">
     <h3>Meaning:</h3>
     <p>{{meaning}}</p>
+    <hr>
     <h3>Synonym:</h3>
     <p>{{synonyms}}</p>
+    <hr>
     <h3>Antonyms:</h3>
     <p>{{antonyms}}</p>
+    <hr>
     <h3>Translations:</h3>
     <p>{{translations}}</p>
   </div>
