--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
   <div class="container-fluid">
       <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center">
         <img src="{% static 'dict-logo.png' %}" alt="logo" height=40 width=40 class="image-fluid" style="background-color:white;"></img>
-        <strong>ECH-DICT</strong>
+        <strong>ECH-DICTIONARY</strong>
       </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
