--- a/home/templates/home/word.html
+++ b/home/templates/home/word.html
@@ -20,6 +20,8 @@
   </form>
 </div>
   <div class="container pt-3">
+    <h3>Searched Word: {{search}}</h3>
+    <hr>
     <h3>Meaning:</h3>
     <p>{{meaning}}</p>
     <hr>
