--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,18 @@
   </div>
 </nav>
 </header>
+{% if messages %}
+{% for message in messages %}
+<div class="container-fluid">
+  <div class="container">
+    <div class="alert alert-{{ message.tags }}">
+      {{ message }}
+    </div>
+  </div>
+</div>
+{% endfor %}
+{% endif %}
+
 {% block content %}
 {% endblock %}
 
