--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -4,6 +4,9 @@
 {% block content %}
 <div class="container-fluid pt-3 pb-3">
   <div class="container">
+    <h1>Registeration Form</h1>
+    <p> Please fill out the form below to create your account</p>
+    <hr>
     <form method="POST">
       {% csrf_token %}
       {{ form|crispy }}
